force-app/main/default/objects/Case/fields/Acorn_Issue_Id__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Issue_Id__c</fullName>
    <externalId>true</externalId>
    <label>Acorn Issue Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>