force-app/main/default/objects/Case/fields/Acorn_Parent_Issue_Id__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Parent_Issue_Id__c</fullName>
    <label>Acorn Parent Issue Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>