force-app/main/default/objects/Case/fields/Acorn_SBID__c.field-meta.xml
<CustomField>
    <fullName>Acorn_SBID__c</fullName>
    <description>The SBID derived from the asset details per the Add Case Assets Flow</description>
    <label>SBID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>