force-app/main/default/objects/Case/fields/Acorn_SUser_Id__c.field-meta.xml
<CustomField>
    <fullName>Acorn_SUser_Id__c</fullName>
    <description>Security SUserID number</description>
    <label>Acorn SUser Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>