force-app/main/default/objects/Case/fields/Acorn_Team_Queue__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Team_Queue__c</fullName>
    <description>This field stores the value of assignment from Acorn.</description>
    <label>Acorn Team Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>