force-app/main/default/objects/Case/fields/Acorn_Ticket_Not_Matched__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Ticket_Not_Matched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acorn Ticket Not Matched</label>
    <type>Checkbox</type>
</CustomField>