force-app/main/default/objects/Case/fields/Acorn_User_Queue__c.field-meta.xml
<CustomField>
    <fullName>Acorn_User_Queue__c</fullName>
    <description>This field will store the value of assignment from Acorn.</description>
    <label>Acorn User Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>