force-app/main/default/objects/Case/fields/Acorn_Work_order__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Work_order__c</fullName>
    <formula>Work_Order__r.Acorn_WorkOrder_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acorn Work order</label>
    <type>Text</type>
</CustomField>