force-app/main/default/objects/Case/fields/Acorn_Work_order_Number__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Work_order_Number__c</fullName>
    <label>Acorn Work order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>