force-app/main/default/objects/Case/fields/AssetDetail__c.field-meta.xml
<CustomField>
    <fullName>AssetDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssetDetail</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Cases (AssetDetail)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>