force-app/main/default/objects/Case/fields/Authorization_Channel__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Channel__c</fullName>
    <description>Denotes the method used to receive the authorization</description>
    <label>Authorization Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Automated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>