force-app/main/default/objects/Case/fields/Authorization_Status__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Status__c</fullName>
    <description>field notating what the authorization status for the case request is</description>
    <label>Authorization Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authorization Received</fullName>
            </value>
            <value>
                <fullName>External Authorization Required</fullName>
            </value>
            <value>
                <fullName>Pending Authorization</fullName>
            </value>
            <value>
                <fullName>Authorization Rejected</fullName>
            </value>
            <value>
                <fullName>Authorization Escalated</fullName>
            </value>
            <value>
                <fullName>Authorization Not Required</fullName>
            </value>
            <value>
                <fullName>Internal Authorization Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>