force-app/main/default/objects/Case/fields/Availability_Checked__c.field-meta.xml
<CustomField>
    <fullName>Availability_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Availability Checked</label>
    <type>Checkbox</type>
</CustomField>