force-app/main/default/objects/Case/fields/Availability_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Availability_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Availability Confirmed</label>
    <type>Checkbox</type>
</CustomField>