force-app/main/default/objects/Case/fields/BackOffice_Case__c.field-meta.xml
<CustomField>
    <fullName>BackOffice_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BackOffice Case</label>
    <type>Checkbox</type>
</CustomField>