force-app/main/default/objects/Case/fields/Bladder_Mount_Location__c.field-meta.xml
<CustomField>
    <fullName>Bladder_Mount_Location__c</fullName>
    <description>Asset/Product related questionnaire information on a Case to support  SFDC to Acron Integration</description>
    <label>Bladder Mount Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>