force-app/main/default/objects/Case/fields/Business_RuleId__c.field-meta.xml
<CustomField>
    <fullName>Business_RuleId__c</fullName>
    <description>Get Business Rule Id</description>
    <label>Business RuleId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>