force-app/main/default/objects/Case/fields/Bypass_WO_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Bypass_WO_Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass WO Duplicate</label>
    <type>Checkbox</type>
</CustomField>