force-app/main/default/objects/Case/fields/CallCentreText__c.field-meta.xml
<CustomField>
    <fullName>CallCentreText__c</fullName>
    <label>CallCentreText</label>
    <length>20</length>
    <type>Text</type>
</CustomField>