force-app/main/default/objects/Case/fields/Case_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Close_Reason__c</fullName>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>