force-app/main/default/objects/Case/fields/Case_Information__c.field-meta.xml
<CustomField>
    <fullName>Case_Information__c</fullName>
    <label>Case Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>