force-app/main/default/objects/Case/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <description>Formula field utilizing VF page/ merge fields to log effort task on Case.  SDT-4271</description>
    <formula>if( $Profile.Name = &quot;Customer Service&quot;,HYPERLINK(&quot;/apex/GenTaskPage?id=&quot;&amp; Id ,CaseNumber,&quot;_self&quot;),HYPERLINK(&quot;/lightning/r/&quot;&amp; CASESAFEID(Id) &amp; &quot;/view&quot;,CaseNumber, &quot;_self&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case #</label>
    <type>Text</type>
</CustomField>