force-app/main/default/objects/Case/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <description>Case Reason on the Case</description>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Case_Reason</valueSetName>
    </valueSet>
</CustomField>