force-app/main/default/objects/Case/fields/Case_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Status__c</fullName>
    <description>Captures the sub-status for a Case State</description>
    <label>Case Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Initial Inbound Interaction</fullName>
            </value>
            <value>
                <fullName>Pending Customer Information</fullName>
            </value>
            <value>
                <fullName>Pending Vendor Procurement</fullName>
            </value>
            <value>
                <fullName>Pending Cost Configuration</fullName>
            </value>
            <value>
                <fullName>Pending Request Approval</fullName>
            </value>
            <value>
                <fullName>Pending Price Configuration</fullName>
            </value>
            <value>
                <fullName>Pending Quote Approval</fullName>
            </value>
            <value>
                <fullName>Pending Vendor Information</fullName>
            </value>
            <value>
                <fullName>Pending Service Integration</fullName>
            </value>
            <value>
                <fullName>Pending Dispatch</fullName>
            </value>
            <value>
                <fullName>Pending Manual Dispatch</fullName>
            </value>
            <value>
                <fullName>Pending Schedule Confirmation</fullName>
            </value>
            <value>
                <fullName>Pending Service Confirmation</fullName>
            </value>
            <value>
                <fullName>Service Not Performed</fullName>
            </value>
            <value>
                <fullName>Service Confirmed</fullName>
            </value>
            <value>
                <fullName>Service Not Confirmed</fullName>
            </value>
            <value>
                <fullName>Request Not Approved</fullName>
            </value>
            <value>
                <fullName>Request Canceled</fullName>
            </value>
            <value>
                <fullName>Pending Vendor Follow Up</fullName>
            </value>
            <value>
                <fullName>Pending Service Issue Resolution</fullName>
            </value>
            <value>
                <fullName>Pending Schedule Recovery</fullName>
            </value>
            <value>
                <fullName>Pending Recovery Confirmation</fullName>
            </value>
            <value>
                <fullName>Status Provided</fullName>
            </value>
            <value>
                <fullName>Status Not Provided</fullName>
            </value>
            <value>
                <fullName>Recovery Scheduled</fullName>
            </value>
            <value>
                <fullName>Recovery Not Performed</fullName>
            </value>
            <value>
                <fullName>Recovery Confirmed</fullName>
            </value>
            <value>
                <fullName>Integration Error</fullName>
            </value>
            <value>
                <fullName>Request Closed</fullName>
            </value>
            <value>
                <fullName>Pending Additional Research</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>