force-app/main/default/objects/Case/fields/Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Type__c</fullName>
    <description>It will have all case sub type values which will depend on Case type selection.</description>
    <label>Case Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Case_Sub_Type</valueSetName>
    </valueSet>
</CustomField>