force-app/main/default/objects/Case/fields/Case_Subtype_Email_Format__c.field-meta.xml
<CustomField>
    <fullName>Case_Subtype_Email_Format__c</fullName>
    <description>Truncating the potential bulk picklist value for email formatting purposes</description>
    <formula>IF( TEXT(Case_Sub_Type__c) = &quot;Bulk/Got Junk/Junk King&quot;,&quot;Bulk&quot;,TEXT(Case_Sub_Type__c))</formula>
    <label>Case Subtype Email Format</label>
    <type>Text</type>
</CustomField>