force-app/main/default/objects/Case/fields/CaseComment_CreateDate__c.field-meta.xml
<CustomField>
    <fullName>CaseComment_CreateDate__c</fullName>
    <label>CaseComment CreateDate</label>
    <type>DateTime</type>
</CustomField>