force-app/main/default/objects/Case/fields/Check_Case__c.field-meta.xml
<CustomField>
    <fullName>Check_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Case</label>
    <type>Checkbox</type>
</CustomField>