force-app/main/default/objects/Case/fields/CheckBackDatedCase__c.field-meta.xml
<CustomField>
    <fullName>CheckBackDatedCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is technical field to check if backdated case to stop recursive call</description>
    <label>CheckBackDatedCase</label>
    <type>Checkbox</type>
</CustomField>