force-app/main/default/objects/Case/fields/CheckReassignment__c.field-meta.xml
<CustomField>
    <fullName>CheckReassignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckReassignment</label>
    <type>Checkbox</type>
</CustomField>