force-app/main/default/objects/Case/fields/Client_to_meet_the_vendor_driver__c.field-meta.xml
<CustomField>
    <fullName>Client_to_meet_the_vendor_driver__c</fullName>
    <inlineHelpText>Does the client expect to meet the vendor/driver when on site?</inlineHelpText>
    <label>Client to meet the vendor/driver?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>