force-app/main/default/objects/Case/fields/Close_Acorn_Ticket_API_Failed__c.field-meta.xml
<CustomField>
    <fullName>Close_Acorn_Ticket_API_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates API request for closing Acorn Ticket is failed</description>
    <label>Close Acorn Ticket API Failed</label>
    <type>Checkbox</type>
</CustomField>