force-app/main/default/objects/Case/fields/Close_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Case_Reason__c</fullName>
    <description>SDT 17208 -- Added a list of drop down reasons for cases that are force closed.</description>
    <label>Close Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Action Needed</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Call Issues</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Locally Serviced</fullName>
            </value>
            <value>
                <fullName>Integration Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>