force-app/main/default/objects/Case/fields/Close_Pickup_Case__c.field-meta.xml
<CustomField>
    <fullName>Close_Pickup_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to close the pickup case</description>
    <label>Close Pickup Case</label>
    <type>Checkbox</type>
</CustomField>