force-app/main/default/objects/Case/fields/Company_Category__c.field-meta.xml
<CustomField>
    <fullName>Company_Category__c</fullName>
    <label>Company Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>