force-app/main/default/objects/Case/fields/CompanyCategoryCode__c.field-meta.xml
<CustomField>
    <fullName>CompanyCategoryCode__c</fullName>
    <label>CompanyCategoryCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>