force-app/main/default/objects/Case/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Contact Name of the case</description>
    <formula>Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName</formula>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>