force-app/main/default/objects/Case/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <description>Formula Field to Display Contact Title</description>
    <formula>Contact.Account_Title__r.Name</formula>
    <inlineHelpText>Click &quot;Contact Details&quot; to Edit Title.</inlineHelpText>
    <label>Contact Title</label>
    <type>Text</type>
</CustomField>