force-app/main/default/objects/Case/fields/Contact_Title_Email_Form__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title_Email_Form__c</fullName>
    <description>Contact Title format for email template usage</description>
    <formula>IF( 
FIND(&quot; &quot;, Contact.Account_Title__r.Name,1)=0, 
UPPER(LEFT(Contact.Account_Title__r.Name,1))&amp;MID(Contact.Account_Title__r.Name,2,100), 
IF( 
FIND(&quot; &quot;,MID(Contact.Account_Title__r.Name,FIND(&quot; &quot;,Contact.Account_Title__r.Name,1)+1,LEN(Contact.Account_Title__r.Name)-FIND(&quot; &quot;,Contact.Account_Title__r.Name,1)))=0, 
UPPER(LEFT(Contact.Account_Title__r.Name,1))&amp; 
MID(Contact.Account_Title__r.Name,2,FIND(&quot; &quot;,Contact.Account_Title__r.Name,1)-1)&amp;&quot; &quot;&amp; 
UPPER(MID(Contact.Account_Title__r.Name,FIND(&quot; &quot;,Contact.Account_Title__r.Name,1)+1,1))&amp; 
MID(Contact.Account_Title__r.Name,FIND(&quot; &quot;,Contact.Account_Title__r.Name,1)+2,100), 
UPPER(LEFT(Contact.Account_Title__r.Name,1))&amp; 
MID(Contact.Account_Title__r.Name,2,FIND(&quot; &quot;,Contact.Account_Title__r.Name,1)-1)&amp;&quot; &quot;&amp; 
UPPER(MID(Contact.Account_Title__r.Name,FIND(&quot; &quot;,Contact.Account_Title__r.Name,1)+1,1))&amp; 
MID(Contact.Account_Title__r.Name,FIND(&quot; &quot;,Contact.Account_Title__r.Name,1)+2,FIND(&quot; &quot;,MID(Contact.Account_Title__r.Name,FIND(&quot; &quot;,Contact.Account_Title__r.Name,1)+1,LEN(Contact.Account_Title__r.Name)-FIND(&quot; &quot;,Contact.Account_Title__r.Name,1)))-1)&amp; 
UPPER(MID(Contact.Account_Title__r.Name,FIND(&quot; &quot;,MID(Contact.Account_Title__r.Name,FIND(&quot; &quot;,Contact.Account_Title__r.Name,1)+1,LEN(Contact.Account_Title__r.Name)-FIND(&quot; &quot;,Contact.Account_Title__r.Name,1)))+FIND(&quot; &quot;,Contact.Account_Title__r.Name,1)+1,1))&amp; 
MID(Contact.Account_Title__r.Name,FIND(&quot; &quot;,MID(Contact.Account_Title__r.Name,FIND(&quot; &quot;,Contact.Account_Title__r.Name,1)+1,LEN(Contact.Account_Title__r.Name)-FIND(&quot; &quot;,Contact.Account_Title__r.Name,1)))+FIND(&quot; &quot;,Contact.Account_Title__r.Name,1)+2,100)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Title Email Form</label>
    <type>Text</type>
</CustomField>