force-app/main/default/objects/Case/fields/ContactDepartment__c.field-meta.xml
<CustomField>
    <fullName>ContactDepartment__c</fullName>
    <description>Formula Field to Display Contact Department</description>
    <formula>Contact.Account_Department__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click Contact Details to edit department</inlineHelpText>
    <label>Contact Department</label>
    <type>Text</type>
</CustomField>