force-app/main/default/objects/Case/fields/Container_For__c.field-meta.xml
<CustomField>
    <fullName>Container_For__c</fullName>
    <label>Container For</label>
    <length>80</length>
    <type>Text</type>
</CustomField>