force-app/main/default/objects/Case/fields/ContainerPosition__c.field-meta.xml
<CustomField>
    <fullName>ContainerPosition__c</fullName>
    <formula>Asset.Container_Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Container Position</label>
    <type>Text</type>
</CustomField>