force-app/main/default/objects/Case/fields/Cost_of_bale_wire_per_unit__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_bale_wire_per_unit__c</fullName>
    <label>Cost of bale wire (per unit)</label>
    <type>TextArea</type>
</CustomField>