force-app/main/default/objects/Case/fields/CPQ_New_Service__c.field-meta.xml
<CustomField>
    <fullName>CPQ_New_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be checked when the Case owner have Salesforce CPQ License</description>
    <label>CPQ New Service</label>
    <type>Checkbox</type>
</CustomField>