force-app/main/default/objects/Case/fields/Create_AM_and_PM_Pickups__c.field-meta.xml
<CustomField>
    <fullName>Create_AM_and_PM_Pickups__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox for creating 2 workorders for same day</description>
    <label>Create AM and PM Pickups</label>
    <type>Checkbox</type>
</CustomField>