force-app/main/default/objects/Case/fields/Current_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Current_Milestone__c</fullName>
    <label>Current Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External Authorization</fullName>
            </value>
            <value>
                <fullName>PM Approval</fullName>
            </value>
            <value>
                <fullName>Procurement</fullName>
            </value>
            <value>
                <fullName>Ready for Setup</fullName>
            </value>
            <value>
                <fullName>Obtain Customer Information</fullName>
            </value>
            <value>
                <fullName>Obtain Request Approval</fullName>
            </value>
            <value>
                <fullName>Notify Customer of Rejection</fullName>
            </value>
            <value>
                <fullName>Obtain Hauler Information</fullName>
            </value>
            <value>
                <fullName>Integrate to Acorn</fullName>
            </value>
            <value>
                <fullName>Manually dispatch work order</fullName>
            </value>
            <value>
                <fullName>Obtain Schedule Confirmation</fullName>
            </value>
            <value>
                <fullName>Obtain Service Confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>