force-app/main/default/objects/Case/fields/Customer_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Number__c</fullName>
    <description>Reference Number that Customer Provides for a Request.</description>
    <label>Customer Reference Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>