force-app/main/default/objects/Case/fields/Disposed_Of__c.field-meta.xml
<CustomField>
    <fullName>Disposed_Of__c</fullName>
    <label>Disposed Of</label>
    <length>80</length>
    <type>Text</type>
</CustomField>