force-app/main/default/objects/Case/fields/Disputed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disputed_Amount__c</fullName>
    <description>SDT39047</description>
    <inlineHelpText>Please enter a valid amount.</inlineHelpText>
    <label>Disputed Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>