force-app/main/default/objects/Case/fields/Documentation_of_cost__c.field-meta.xml
<CustomField>
    <fullName>Documentation_of_cost__c</fullName>
    <label>Documentation of cost</label>
    <type>TextArea</type>
</CustomField>