force-app/main/default/objects/Case/fields/Does_the_container_have_power__c.field-meta.xml
<CustomField>
    <fullName>Does_the_container_have_power__c</fullName>
    <description>answer from the flow</description>
    <label>Does the container have power?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>