force-app/main/default/objects/Case/fields/Does_the_container_need_to_be_emptied__c.field-meta.xml
<CustomField>
    <fullName>Does_the_container_need_to_be_emptied__c</fullName>
    <description>Answer from the repair flow</description>
    <label>Does the container need to be emptied?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>