force-app/main/default/objects/Case/fields/Due_Date_Time_for_CSC__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Time_for_CSC__c</fullName>
    <description>This is to built, due date time for Confirm service completion task. It should be service date + 1 day with 1 PM EST</description>
    <formula>DATETIMEVALUE(Text(Service_Date__c+1)+&quot; 17:00:00&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Time for CSC</label>
    <type>DateTime</type>
</CustomField>