force-app/main/default/objects/Case/fields/Due_Date_Time_for_OSC__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Time_for_OSC__c</fullName>
    <description>This is to built, due date time for obtain schedule confirmation task. It should be service date with 5 PM EST</description>
    <formula>DATETIMEVALUE(Text(Service_Date__c)+&quot; 21:00:00&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date Time for OSC</label>
    <type>DateTime</type>
</CustomField>