force-app/main/default/objects/Case/fields/Email_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Email_Tracking_Number__c</fullName>
    <label>Email Tracking Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>