force-app/main/default/objects/Case/fields/EmailofContact__c.field-meta.xml
<CustomField>
    <fullName>EmailofContact__c</fullName>
    <formula>Contact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EmailofContact</label>
    <type>Text</type>
</CustomField>