force-app/main/default/objects/Case/fields/EmailTemplateAdditionalComments__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateAdditionalComments__c</fullName>
    <label>EmailTemplateAdditionalComments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>