force-app/main/default/objects/Case/fields/Emergency_Reason__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Reason__c</fullName>
    <label>Emergency Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Walk Through</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Flood</fullName>
            </value>
            <value>
                <fullName>Customer Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>