force-app/main/default/objects/Case/fields/Empty_and_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Empty_and_Return_Date__c</fullName>
    <label>Empty and Return Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>