force-app/main/default/objects/Case/fields/Equipment_Size_Code__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Size_Code__c</fullName>
    <description>Equipment Size Code information to support  SFDC to Acron Integration</description>
    <label>Equipment Size Code</label>
    <length>125</length>
    <type>Text</type>
</CustomField>