force-app/main/default/objects/Case/fields/Equipment_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type_Code__c</fullName>
    <description>Equipment type code information to support  SFDC to Acron Integration</description>
    <label>Equipment Type Code</label>
    <length>125</length>
    <type>Text</type>
</CustomField>